# disnake-faceit-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bot/: __main__.py  analysis.py  bot.py  cogs.py  utils.py
