[project]
name = "disnake-faceit-bot"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "disnake>=2.0.0",
    "faceit[env]>=0.3.1",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "ruff>=0.15.14",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "decouple.*"
follow_untyped_imports = true

[tool.ruff]
line-length = 88
preview = true
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Dynamically typed expressions (`Any`) are disallowed
    "COM812",  # Trailing comma formatting conflict
    "CPY001",  # Missing copyright notice
    "D",       # pydocstyle docstring violations
    "DOC",     # pydoclint docstring validation violations
    "E501",    # Line too long
    "FIX002",  # TODO comment detected
    "PLR0904", # Too many public methods
    "PLR0913", # Too many function arguments
    "PLR2004", # Magic value used in a comparison
    "RUF003",  # Ambiguous Unicode character in comment
    "S101",    # Use of assert detected
    "SLF001",  # Private member accessed outside class
    "T201",    # `print()` statement detected
    "TD",      # flake8-todos violations
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["disnake"]
